# pyphoenix-project

./: .gitignore  README.md  Requirements.md  develop_mfarray_example.ipynb  notes.md  open-vscode.bat  pyproject.toml  setup.py
.github/workflows/: ci.yml
data/mfarray/: constant.txt  constant_layered.txt  external_binary.txt  internal.txt  internal_layered.txt
dfn/toml/: prt-prp.toml
docs/: develop_mfarray_example.ipynb  srs.md
docs/dev/: c4.md  sdd.md  srs.md
docs/dev/c4/: containers.md
docs/examples/: array_example.py
docs/examples/data/mfarray/: external.txt  external_factor.txt  internal.txt  internal_factor.txt  mixed_layered.txt
flopy4/: array.py  attrs.py  block.py  compound.py  constants.py  dfn.lark  dfn.py  mf6.lark  model.py  package.py  param.py  parameter.py  parsers.py  resolver.py  scalar.py  simulation.py  utils.py
flopy4/data/: __init__.py  binary.py  constants.py  mfarray.py  mflist.py  mixins.py
flopy4/io/: lark.py
flopy4/ispec/: exg_gwfgwf.py  gwe_dis.py  gwe_model.py  gwf_dis.py  gwf_ic.py  gwf_model.py  gwf_nam.py  gwt_dis.py  gwt_model.py  prt_dis.py  prt_model.py  prt_prp.py  sim_nam.py  sim_tdis.py  sln_ims.py
flopy4/lark/: __init__.py  dfn.lark  keys.lark  mf6.lark
flopy4/mf6/io/: __init__.py  converter.py  parser.py  transformer.py
flopy4/mf6/io/spec/: __init__.py  parser.py  transformer.py
flopy4/singledispatch/: plot.py  plot_int.py
spec/: dfn2toml.py  dfns.txt  make_ipkg.py  make_ispec.py  make_toml.py  mf6model.template  mf6pkg.template
spec/ipkg/: gwe_dis.py  gwe_model.py  gwf_dis.py  gwf_ic.py  gwf_ic.v2.py  gwf_model.py  gwf_nam.py  gwt_dis.py  gwt_model.py  prt_dis.py  prt_model.py  prt_prp.py  sim_nam.py
spec/toml/: exg-gwfgwf.toml  gwe-dis.toml  gwf-dis.toml  gwf-ic.toml  gwf-nam.toml  gwt-dis.toml  prt-dis.toml  prt-prp.toml  sim-nam.toml  sim-tdis.toml  sln-ims.toml
test/: conftest.py  pytest.ini  test_array.py  test_attrs.py  test_block.py  test_dfn.py  test_examples.py  test_gwfoc.py  test_lark.py  test_list.py  test_model.py  test_package.py  test_resolve.py  test_scalar.py  test_sim.py  test_singledispatch.py
